--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
 - Basic structure ✓
 - Themes ✓
-- Add todo page
-- Todo model
-- Todo provider
-- Todo UI
-- Gridview of Todos
+- Add todo page ✓
+- Todo model ✓
+- Todo provider ✓
+- Todo UI ✓
+- Gridview of Todos ✓
 - Adding / removing functionality
- 
+- change text colors and font family
